--- a/finder/templates/finder/index2.html
+++ b/finder/templates/finder/index2.html
@@ -53,9 +53,9 @@
             </div>
         </div>
         <div class="main">
-            <div class="manual">
+            {% comment %} <div class="manual">
                 <img src="{% static 'finder/img/manual.jpg' %}" alt="Инструкция">
-            </div>
+            </div> {% endcomment %}
             <div class="table-container">
                 <table>
                     <thead>
@@ -188,7 +188,7 @@
     <script src='{% static "finder/js/popups.js"%}'></script> 
     <script src='{% static "finder/js/search_finder_input.js"%}'></script> 
     <script src='{% static "finder/js/add_pin_positions.js"%}'></script> 
-    <script src='{% static "finder/js/switch_manual_finger.js"%}'></script> 
+    {% comment %} <script src='{% static "finder/js/switch_manual_finger.js"%}'></script>  {% endcomment %}
 </body>
 </html>
 
