--- a/finder/static/finder/css/style_finder2.css
+++ b/finder/static/finder/css/style_finder2.css
@@ -252,6 +252,80 @@ header {
     height: auto;
 }
 
+.title_count {
+    margin-right: 5px;
+}
+
+.arrow_img {
+    margin-left: 5px;
+    margin-bottom: 5px;
+}
+
+.total_contauner {
+    display: flex;
+    gap: 10px;
+}
+
+
+.any_projects_popup {
+    position: absolute;
+    top: 40%;
+    transform: translate(-50%, -50%);
+    z-index: 10; /* Убедитесь, что popup находится поверх таблицы */
+    width: 610px;
+    height: 437px;
+    left: 655px;
+    border-radius: 12px;
+    background: rgb(255, 255, 255);
+    border: 1px solid black;
+}
+
+
+.any_projects_popup > div {
+    text-align: center;
+    background-color: white; 
+    border-radius: 8px;
+    /* box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); */
+}
 
 
 
+.any_projects_popup.active {
+    display: flex; /* Показываем popup, когда он активен */
+    justify-content: center;
+    align-items: center;
+}
+
+.close {
+    display: flex;
+    justify-content: right;
+    padding: 5px;
+}
+.close img {
+    cursor: pointer;
+}
+
+.title_popup_any_projects {
+    color: rgb(31, 58, 85);
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 36px;   
+    margin-bottom: 10px;
+
+}
+
+.name_position {
+    text-align: left;
+    margin-bottom: 20px;
+}
+
+.popup_container{
+    border: 1px solid black;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+.item_project_popup {
+    display: flex;
+    gap: 120px;
+}
