--- a/finder/templates/finder/index2.html
+++ b/finder/templates/finder/index2.html
@@ -53,6 +53,26 @@
             </div>
         </div>
         <div class="main">
+            <div class="any_projects_popup">
+                <div class="close">
+                    <img id="icon_color" src="{% static 'finder/icon/close.svg' %}" alt="Закрыть">  
+                </div>
+                <div class="popup_container"> 
+                    <div class="title_popup_any_projects">
+                        На всех проектах
+                    </div>
+                    <div class="name_position">
+                        Винт M4-6gx20-48.016 ГОСТ10336-80
+                    </div>
+                    <div class="item_project_popup">
+                        <div class="project_name_popup">4 дивиз - БУК-МБ 255 - приход</div>
+                        <div class="project_quantity_popup">2.28</div>
+                        <div class="project_unit_popup">м</div>
+
+
+                    </div>
+                </div>
+            </div>
             {% comment %} <div class="manual">
                 <img src="{% static 'finder/img/manual.jpg' %}" alt="Инструкция">
             </div> {% endcomment %}
@@ -110,11 +130,15 @@
                         <div class="circle" id="project_color"></div>
                         <p id="project_name"></p>
                     </div>
-                    <h3 class="position_title">Всего:</h3>
-                    <p id="total_quantity">571 шт</p>
+                    <h3 class="position_title">Всего на проекте:</h3>
+                    <div class="total_contauner">
+                        <p id="total_quantity"></p>
+                        <p id="unit"></p>
+                    </div>
                     <div class="any_projects">
-                        <p>На всех проектах (9)</p>
-                        <img src="{% static 'finder/icon/arrow.svg' %}" alt="Стрелка">
+                        <p class="title_count">На всех проектах</p>
+                        <p id="count_projects"></p>
+                        <img class="arrow_img" src="{% static 'finder/icon/arrow.svg' %}" alt="Стрелка">
                     </div>
                     <div class="hide_info" id="hide_info">Скрыть информацию</div>
                 </div>
