--- a/finder/static/finder/css/style_finder2.css
+++ b/finder/static/finder/css/style_finder2.css
@@ -115,7 +115,10 @@ header {
     justify-content: space-between;
 }
 
-.button_wrapper, .button_wrapper_clear,.button_wrapper_update{
+.button_wrapper,
+.button_wrapper_clear,
+.button_wrapper_update,
+.button_wrapper_close {
     height: 40px;
     display: flex;
     align-items: center;
@@ -123,30 +126,30 @@ header {
     border-radius: 40px;
     color: var(--text-color);
     font-size: 16px;
+    cursor: pointer;
+    width: 224px;
 }
 
 
-
-
-
 .button_wrapper {
-    width: 224px;
-    height: 40px;
     background: var(--primary-color);
     margin-left: 45px;
 }
 
 .button_wrapper_clear {
-    width: 224px;
     background: var(--secondary-color);
     margin-right: 40px;
 }
 
 .button_wrapper_update {
-    width: 224px;
     background: rgb(12, 207, 19);
     opacity: 0.3;
     margin-bottom: 5px;
+}
+
+.button_wrapper_close {
+    background: rgb(246, 78, 17);
+
 }
 
 .details_item {
@@ -267,25 +270,54 @@ header {
 }
 
 
+.background-overlay {
+    display: none; /* Скрываем фон по умолчанию */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(31, 58, 85, 0.3);
+    z-index: 9; /* Убедитесь, что фон находится под popup */
+}
+
 .any_projects_popup {
+    display: none; /* Скрываем popup по умолчанию */
     position: absolute;
     top: 40%;
     transform: translate(-50%, -50%);
-    z-index: 10; /* Убедитесь, что popup находится поверх таблицы */
+    z-index: 10; /* Убедитесь, что popup находится поверх фона */
     width: 610px;
-    height: 437px;
+    height: 545px;
     left: 655px;
-    border-radius: 12px;
+    border-radius: 10px;
     background: rgb(255, 255, 255);
     border: 1px solid black;
 }
 
+.title_popup_any_projects {
+    color: rgb(31, 58, 85);
+    font-family: var(--font-family);
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.name_position {
+    color: rgb(31, 58, 85);
+    font-family: var(--font-family);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 19px;
+    text-align: left;
+    margin-left: 30px;
+    margin-bottom: 20px;
+    margin-top: 10px;
+}
 
 .any_projects_popup > div {
     text-align: center;
     background-color: white; 
     border-radius: 8px;
-    /* box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); */
 }
 
 
@@ -303,29 +335,71 @@ header {
 }
 .close img {
     cursor: pointer;
+    margin-right: 10px;
+    margin-top: 5px;
 }
 
-.title_popup_any_projects {
-    color: rgb(31, 58, 85);
-    font-size: 30px;
-    font-weight: 700;
-    line-height: 36px;   
-    margin-bottom: 10px;
-
-}
-
-.name_position {
-    text-align: left;
-    margin-bottom: 20px;
-}
-
-.popup_container{
-    border: 1px solid black;
-    padding-left: 30px;
-    padding-right: 30px;
-}
 
 .item_project_popup {
-    display: flex;
-    gap: 120px;
+    height: 33vh;
+    overflow: auto;
+    
 }
+.project_container div {
+    font-family: var(--font-family);
+    font-size: 16px;
+}
+
+.project_container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 25px;
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+.project_name_popup {
+    width: 40%;
+    text-align: left;
+    
+}   
+
+.info_result_sum_project {
+    width: 550px;
+    height: 40px;
+    margin-left: 30px;
+    background: rgba(158, 236, 160, 1);
+}
+
+.info_result_items {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+    
+}
+
+.info_result_items_title,
+.final_result_sum_unit,
+.final_result_sum {
+    font-size: 16px;
+    font-weight: bold;
+    font-family: var(--font-family);
+    color: rgb(31, 58, 85);
+
+}
+
+.close_div {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+}
+
+.final_result_sum_unit {
+    margin-right: 13px;
+}
+.final_result_sum {
+    margin-left: 175px;
+}
+
