--- a/finder/templates/finder/index2.html
+++ b/finder/templates/finder/index2.html
@@ -263,6 +263,7 @@
     <script src='{% static "finder/js/details.js"%}'></script> 
     <script src='{% static "finder/js/popups.js"%}'></script> 
     <script src='{% static "finder/js/filters_projects.js"%}'></script> 
+    <script src="{% static "finder/js/projectSelection.js" %}"></script>
     {% comment %} <script src='{% static "finder/js/switch_manual_finger.js"%}'></script>  {% endcomment %}
 </body>
 </html>
