--- a/finder/templates/finder/index2.html
+++ b/finder/templates/finder/index2.html
@@ -94,6 +94,67 @@
                             </div>
                 </div>
             </div>
+            <div class="popup_container upload_popup">
+                <div id="close_update" class='close'>
+                    <img id="icon_color" src="{% static 'finder/icon/close.svg' %}" alt="Закрыть">  
+                </div>
+                <div class="popup_content">
+                    <div class="logo">
+                        <img src="{% static 'finder/icon/logo_white.svg' %}" alt="Логотип">
+                    </div>
+                    <div class="title_update_popup">
+                        <h2>Обновить базу</h2>
+                    </div>
+                    <form id="uploadForm" method="post" enctype="multipart/form-data" class="upload-form">
+                        {% csrf_token %}
+                        <div class="file-upload-wrapper">
+                            <label for="fileInput" class="file-upload-label">
+                                <div class="upload-icon">
+                                    <svg width="24" height="24" viewBox="0 0 24 24">
+                                        <path d="M19 13H13V19H11V13H5V11H11V5H13V11H19V13Z"/>
+                                    </svg>
+                                </div>
+                                <span class="upload-text">Выберите файл</span>
+                                <span class="file-name">Файл не выбран</span>
+                            </label>
+                            <input type="file" id="fileInput" name="doc" accept=".xlsx" required class="file-upload-input">
+                        </div>
+                        <button type="button" class="button upload-button">
+                            <span>Загрузить</span>
+                            <div class="button-icon">
+                                <svg width="20" height="20" viewBox="0 0 24 24">
+                                    <path d="M4 12V19H20V12M12 3V16M12 16L7 11M12 16L17 11" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>
+                            </div>
+                        </button>
+                        <div class="not_file_info">
+                            
+                        </div>
+                       
+                    </form>
+                    <div class="load_animation">
+                        <div class="load_info">
+                            <p class="loading-text">Пожалуйста подождите! Данные обрабатываются!</p>
+                            <p class="load_error"></p>
+                            <p class="update_success"></p>
+                        </div>
+                        
+                        <div class="gears-container animate_process">
+                            <svg width="134" height="106" viewBox="0 0 134 106" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <!-- Большая синяя шестерня -->
+                                <path class="gear-large" d="M44.021 74.8346L42.7877 64.968C42.1196 64.711 41.4901 64.4027 40.8992 64.043C40.3082 63.6832 39.7301 63.2978 39.1648 62.8867L29.9919 66.7409L21.5127 52.095L29.4523 46.0826C29.4009 45.7228 29.3752 45.376 29.3752 45.0419V42.9607C29.3752 42.6266 29.4009 42.2798 29.4523 41.92L21.5127 35.9076L29.9919 21.2617L39.1648 25.1159C39.7301 24.7048 40.321 24.3194 40.9377 23.9596C41.5544 23.5999 42.171 23.2916 42.7877 23.0346L44.021 13.168H60.9794L62.2127 23.0346C62.8808 23.2916 63.5103 23.5999 64.1012 23.9596C64.6922 24.3194 65.2703 24.7048 65.8356 25.1159L75.0085 21.2617L83.4877 35.9076L75.5481 41.92C75.5995 42.2798 75.6252 42.6266 75.6252 42.9607V45.0419C75.6252 45.376 75.5738 45.7228 75.471 46.0826L83.4106 52.095L74.9314 66.7409L65.8356 62.8867C65.2703 63.2978 64.6794 63.6832 64.0627 64.043C63.446 64.4027 62.8294 64.711 62.2127 64.968L60.9794 74.8346H44.021ZM49.4169 68.668H55.5064L56.5856 60.4971C58.1787 60.086 59.6561 59.4822 61.0179 58.6857C62.3797 57.8891 63.6259 56.9256 64.7564 55.795L72.3877 58.9555L75.3939 53.7138L68.7648 48.7034C69.0217 47.9839 69.2016 47.226 69.3044 46.4294C69.4071 45.6329 69.4585 44.8235 69.4585 44.0013C69.4585 43.1791 69.4071 42.3697 69.3044 41.5732C69.2016 40.7766 69.0217 40.0187 68.7648 39.2992L75.3939 34.2888L72.3877 29.0471L64.7564 32.2846C63.6259 31.1027 62.3797 30.1135 61.0179 29.3169C59.6561 28.5204 58.1787 27.9166 56.5856 27.5055L55.5835 19.3346H49.4939L48.4148 27.5055C46.8217 27.9166 45.3443 28.5204 43.9825 29.3169C42.6207 30.1135 41.3745 31.077 40.2439 32.2076L32.6127 29.0471L29.6064 34.2888L36.2356 39.2221C35.9787 39.993 35.7988 40.7638 35.696 41.5346C35.5933 42.3055 35.5419 43.1277 35.5419 44.0013C35.5419 44.8235 35.5933 45.62 35.696 46.3909C35.7988 47.1617 35.9787 47.9325 36.2356 48.7034L29.6064 53.7138L32.6127 58.9555L40.2439 55.718C41.3745 56.8999 42.6207 57.8891 43.9825 58.6857C45.3443 59.4822 46.8217 60.086 48.4148 60.4971L49.4169 68.668ZM52.6544 54.793C55.6349 54.793 58.1787 53.7395 60.2856 51.6325C62.3926 49.5256 63.446 46.9819 63.446 44.0013C63.446 41.0207 62.3926 38.477 60.2856 36.3701C58.1787 34.2631 55.6349 33.2096 52.6544 33.2096C49.6224 33.2096 47.0658 34.2631 44.9846 36.3701C42.9033 38.477 41.8627 41.0207 41.8627 44.0013C41.8627 46.9819 42.9033 49.5256 44.9846 51.6325C47.0658 53.7395 49.6224 54.793 52.6544 54.793Z" fill="#1F3A55"/>
+                                
+                                <!-- Маленькая оранжевая шестерня -->
+                                <g class="gear-small">
+                                    <path d="M99.2433 38.1744L96.783 33.2451C96.3865 33.2338 96.0008 33.1885 95.6258 33.1093C95.2507 33.03 94.8777 32.935 94.5066 32.8242L90.4222 36.5265L83.2957 30.433L86.3384 25.8298C86.2453 25.6512 86.1681 25.4747 86.1066 25.3001L85.7236 24.2125C85.6621 24.0379 85.6117 23.8519 85.5723 23.6545L80.3166 21.9735L82.0525 12.7592L87.5556 13.0852C87.7753 12.7664 88.0132 12.4562 88.2693 12.1547C88.5254 11.8532 88.7909 11.5786 89.0659 11.3309L87.8946 5.94759L96.757 2.82671L99.2173 7.75603C99.6137 7.76737 99.9995 7.81265 100.375 7.89188C100.75 7.97111 101.123 8.06614 101.494 8.17695L105.578 4.47466L112.705 10.5681L109.662 15.1714C109.755 15.3499 109.832 15.5264 109.894 15.701L110.277 16.7887C110.338 16.9632 110.375 17.1539 110.388 17.3609L115.643 19.0418L113.907 28.2561L108.445 27.9159C108.225 28.2348 107.987 28.5449 107.731 28.8464C107.475 29.1479 107.209 29.4225 106.934 29.6703L108.106 35.0535L99.2433 38.1744ZM100.928 33.9587L104.111 32.8381L103.171 28.3694C103.928 27.8614 104.589 27.2739 105.154 26.6071C105.719 25.9402 106.193 25.2073 106.576 24.4084L111.145 24.6556L111.752 21.3631L107.365 19.9647C107.367 19.5414 107.322 19.1122 107.229 18.677C107.136 18.2418 107.014 17.8094 106.863 17.3797C106.711 16.95 106.535 16.5365 106.335 16.1391C106.135 15.7418 105.901 15.3788 105.635 15.0501L108.177 11.2117L105.641 9.02562L102.249 12.1219C101.441 11.7123 100.607 11.4247 99.7491 11.259C98.8908 11.0934 98.0076 11.0497 97.0994 11.128L95.072 7.0424L91.8896 8.16308L92.8294 12.6317C92.0725 13.1398 91.4115 13.7272 90.8464 14.3941C90.2813 15.061 89.8074 15.7938 89.4246 16.5927L84.8549 16.3455L84.2485 19.638L88.6208 20.9962C88.6284 21.4463 88.6762 21.8823 88.7644 22.304C88.8525 22.7258 88.977 23.1649 89.1378 23.6214C89.2891 24.0511 89.4625 24.4579 89.6581 24.8419C89.8537 25.2258 90.0895 25.5955 90.3657 25.9511L87.8233 29.7895L90.359 31.9755L93.7513 28.8792C94.5596 29.2888 95.3929 29.5765 96.2512 29.7421C97.1095 29.9078 97.9927 29.9514 98.9009 29.8731L100.928 33.9587ZM100.067 26.1119C101.624 25.5634 102.76 24.5447 103.473 23.0559C104.187 21.567 104.269 20.0438 103.72 18.4862C103.172 16.9286 102.153 15.7931 100.664 15.0797C99.1756 14.3664 97.6523 14.284 96.0947 14.8325C94.5102 15.3905 93.368 16.4115 92.6681 17.8956C91.9682 19.3797 91.8925 20.9006 92.441 22.4582C92.9895 24.0158 94.0015 25.1537 95.4769 25.8718C96.9523 26.5898 98.4822 26.6699 100.067 26.1119Z" fill="#F64E11"/>
+                                </g>
+                                
+                            </svg>
+                        </div>
+                     
+                    </div>
+                </div>
+            </div>
             <div class="choice_project_popup" id="choice_project_popup">
                     <div class="close">
                         <img id="icon_color" src="{% static 'finder/icon/close.svg' %}" alt="Закрыть">  
@@ -261,6 +322,9 @@
     <script src='{% static "finder/js/filters_projects.js"%}'></script> 
     <script src="{% static "finder/js/projectSelection.js" %}"></script>
     <script src="{% static "finder/js/all_one_project.js" %}"></script>
+    <script src='{% static "finder/js/upload_file.js"%}'></script> 
+    <script src='{% static "finder/js/check_task_upload_status.js"%}'></script> 
+    <script src='{% static "finder/js/link_permissions.js"%}'></script> 
     {% comment %} <script src='{% static "finder/js/switch_manual_finger.js"%}'></script>  {% endcomment %}
 </body>
 </html>
