дополнительная логика сопоставления позиций

--- a/finder/static/finder/css/style_finder2.css
+++ b/finder/static/finder/css/style_finder2.css
@@ -80,8 +80,10 @@ header {
 }
 
 .filter_container {
-    width: 425px;
+    width: 373px;
     padding: 4px;
+    background: #e2892b29;
+    border-radius: 6px;
 }
 
 .filters {
