--- a/finder/templates/finder/index2.html
+++ b/finder/templates/finder/index2.html
@@ -38,13 +38,16 @@
                                     <input class='check_box' type="checkbox" id="search_by_analog" name="search_by_analog" value="true">
                                     <label for="search_by_comment">искать аналоги</label>
                                 </div>
+                                <div class="check_box_container">
+                                    <input class='check_box' type="checkbox" id="search_by_kd" name="search_by_kd" value="true">
+                                    <label for="search_by_kd">КД\ТН</label>
+                                </div>
                             </div>
                         </div> 
                     </form>    
                 </div>
             </div> 
             <div class="info_window">
-              
             </div>
             <div class="info_update">
                 <div>База обновлена</div>
