работа над логикой копирования

--- a/finder/templates/finder/index2.html
+++ b/finder/templates/finder/index2.html
@@ -331,6 +331,7 @@
     <script src='{% static "finder/js/upload_file.js"%}'></script> 
     <script src='{% static "finder/js/check_task_upload_status.js"%}'></script> 
     <script src='{% static "finder/js/link_permissions.js"%}'></script> 
+    <script src='{% static "finder/js/copy.js"%}'></script> 
     {% comment %} <script src='{% static "finder/js/switch_manual_finger.js"%}'></script>  {% endcomment %}
 </body>
 </html>
