--- a/finder/templates/finder/index2.html
+++ b/finder/templates/finder/index2.html
@@ -199,7 +199,9 @@
                             <th class="header-cell">Артикул</th>
                             <th class="header-cell">Код</th>
                             <th class="header-cell">Наименование</th>
-                            <th class="icon-column"></th>
+                            <th class="icon-column">
+                                <img src="{% static 'finder/icon/content_copy.svg' %}" alt="Копировать" title='Копировать блок закрепленных позиций'>  
+                            </th>
                             <th class="header-cell">Количество на складе</th>
                             <th class="header-cell">Единицы измерения</th>
                             <th class="header-cell">Цена</th>
@@ -323,11 +325,11 @@
     </script>
     <script src='{% static "finder/js/popups.js"%}'></script> 
     <script src='{% static "finder/js/search_finder_input.js"%}'></script> 
-    <script src='{% static "finder/js/add_pin_positions.js"%}'></script> 
+    <script src='{% static "finder/js/add_pin_positions.js"%}'></script>
     <script src='{% static "finder/js/details.js"%}'></script> 
     <script src='{% static "finder/js/filters_projects.js"%}'></script> 
     <script src="{% static "finder/js/projectSelection.js" %}"></script>
-    <script src="{% static "finder/js/all_one_project.js" %}"></script>
+    {% comment %} <script src="{% static "finder/js/all_one_project.js" %}"></script> {% endcomment %}
     <script src='{% static "finder/js/upload_file.js"%}'></script> 
     <script src='{% static "finder/js/check_task_upload_status.js"%}'></script> 
     <script src='{% static "finder/js/link_permissions.js"%}'></script> 
@@ -335,4 +337,5 @@
     {% comment %} <script src='{% static "finder/js/switch_manual_finger.js"%}'></script>  {% endcomment %}
 </body>
 </html>
+
 
