доработка вьюшки детализации исправление ошибок статусов

--- a/finder/static/finder/css/table_style.css
+++ b/finder/static/finder/css/table_style.css
@@ -123,9 +123,8 @@ td:nth-child(13) {
 
 }
 
-.id_positoin_row img :hover {
-    background-color: aqua;
-
+.icon-column {
+    cursor: pointer;
 }
 
 
