--- a/finder/templates/finder/index2.html
+++ b/finder/templates/finder/index2.html
@@ -160,7 +160,6 @@
                                 
                             </svg>
                         </div>
-                     
                     </div>
                 </div>
             </div>
@@ -263,7 +262,7 @@
                 <div class="menu_row">
                     <img src="{% static 'finder/icon/notes.svg' %}" alt="Иконка заметок">
                     <div class="menu_link">
-                        <a href="#">Заметки</a>
+                        <a href="{% url 'notes_home'%}">Заметки</a>
                     </div>
                 </div>
                 <div class="menu_row">
